[LOG4J2-2854] - Create standardized dependency injection API
This replaces the previous attempt at unifying dependency injection and
configuration from a CDI-like API to an API more like javax.inject used
by libraries like Feather and Guice.

https://cwiki.apache.org/confluence/display/LOGGING/Dependency+Injection+and+Configuration
Signed-off-by: Matt Sicker <mattsicker@apache.org>